--- a/templates/login.html
+++ b/templates/login.html
@@ -7,22 +7,41 @@
         <title>Log in</title>
     </head>
 <body class="masthead">
-    <a class="btn btn-home btn-primary " href="/" role="button">Home</a>
-    <div class="card w-50" style="text-align: center">
-    <div>
-        <h2 class="card-header" style="text-align: center">Log in</h2>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
+        <div  class="container-fluid">
+            <a class="navbar-brand" href="/">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class=" collapse navbar-collapse"  id="navbarSupportedContent">
+                <ul class="nav navbar-nav ms-auto">
+                    {% if loggedIn %}
+                    <li class="nav-item"><a class="nav-link " href="./historyQA">History Q&A</a></li>
+                    <li class="nav-item"><a class="nav-link " href="./feedbackForm">Feedback</a></li>
+                    {% endif %}
+                    {% if not loggedIn %}
+                    <li class="nav-item"><a class="nav-link " href="./loginForm">Log in</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link "  href="./logout">Sign Out</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="table">
+        <div class="card w-50" style="text-align: center">
+            <h2 class="card-header" style="text-align: center">Log in</h2>
+            <p> {{error}} </p>
+                    <div class="card-body" >
+            <form action="/login" method="POST">
+                <p style="margin-top: 75px">ID: <input type="text" name="uid"></p>
+                <p>Password: <input type="password" name="password"></p>
+                <p style="margin-top: 35px;margin-bottom: 50px"><input type="submit" value="Submit"></p>
+                
+                <a style="margin: 5px" href="/registerationForm">Register</a>
+            </form>
+            </div>
+        </div>
     </div>
-<p> {{error}} </p>
-        <div class="card-body" >
-<form action="/login" method="POST">
-	<p style="margin-top: 75px">ID: <input type="text" name="uid"></p>
-	<p>Password: <input type="password" name="password"></p>
-	<p style="margin-top: 35px;margin-bottom: 50px"><input type="submit" value="Submit"></p>
-    
-	<a style="margin: 5px" href="/registerationForm">Register</a>
-</form>
-        </div>
-        </div>
-
 </body>
 </html>
